# noise-tunnel

./: .gitignore  Cargo.toml  client-setup.sh  server-setup.sh  vpn-down.sh  vpn-routes.sh  vpn-up.sh
src/: main.rs
src/client/: mod.rs  tui.rs  tun.rs  tunnel.rs
src/protocol/: frame.rs  mod.rs  noise.rs
src/server/: listener.rs
